# compression-tools-examples

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  utility.hpp
src/cryptopp/: aes_api.hpp  aes_sample.cpp
src/lz4/: lz4_api.hpp  simple_buffer.cpp
src/zstd/: common.h  simple_compression.cpp  zstdpp.hpp  zstdpp_helper.hpp
test/: CMakeLists.txt
test/cryptopp/: cryptopp_aes_test.cpp
test/lz4/: lz4cpp_test.cpp
test/zstd/: test_zstdpp.cpp  zstdpp_test.cpp
tool/cmake/: enable_memcheck.cmake
